--- a/src/multi_robot_controller/tasks/tasks_example.yaml
+++ b/src/multi_robot_controller/tasks/tasks_example.yaml
@@ -1,11 +1,3 @@
-- id: A1
-  x: 1.0
-  y: 2.0
-  yaw_deg: 90
-  priority: 5
-- id: B1
-  x: -0.5
-  y: 3.2
-  yaw_deg: 0
-  priority: 1
-  deadline_sec: 300
+version https://git-lfs.github.com/spec/v1
+oid sha256:a82602ed4521e3aede00d0aa3ff1b6f9ef6d159bece37a21aadd2ebe32c2e1a3
+size 130
